[package]
name = "atari2600-rust"
version = "0.1.0"
edition = "2021"
authors = ["Adriano / Sl4ureano"]
description = "Atari 2600 emulator in Rust"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pixels = "0.13"
winit = "0.28"
log = "0.4"
env_logger = "0.11"
bitflags = "2"

[features]
default = []
audio = ["rodio"]

[dependencies.rodio]
version = "0.17"
optional = true
